assets/css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
    @apply scroll-smooth;
}

.math path {
    @apply stroke-[36px];
}

.math-inline svg {
    @apply inline;
}

.math-display svg {
    @apply mx-auto;
}

.math-display {
    @apply overflow-x-scroll overflow-y-hidden;
}

@font-face {
    font-family: 'SF_Cartoonist_Hand';
    font-style: italic;
    font-weight: 400;
    font-display: swap;
    src: url('/fonts/SF_Cartoonist_Hand/SF_Cartoonist_Hand_Bold_Italic.ttf') format('truetype');
}

@font-face {
    font-family: 'SF_Cartoonist_Hand';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url('/fonts/SF_Cartoonist_Hand/SF_Cartoonist_Hand_Bold.ttf') format('truetype');
}

